--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
+    "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "2.0.0",
     "@types/jest": "26.0.23",
